use random model

--- a/public/webar_custom.html
+++ b/public/webar_custom.html
@@ -580,17 +580,17 @@
 
         // Available 3D models in models folder
         const availableModels = [
-            'models/Armabee.glb',
-            'models/Beagle.glb',
-            'models/Chicken.glb',
-            'models/Goat.glb',
-            'models/Hydrant.glb',
-            'models/Mouse.glb',
-            'models/Pigeon.glb',
-            'models/Sheep.glb',
-            'models/Snowman.glb',
-            'models/Water bottle.glb',
-            'models/Water fountain made in Blocks.glb'
+            'models/aramabee.glb',
+            'models/beagle.glb',
+            'models/bottle.glb',
+            'models/chicken.glb',
+            'models/fountain.glb',
+            'models/goat.glb',
+            'models/hydrant.glb',
+            'models/mouse.glb',
+            'models/pigeon.glb',
+            'models/sheep.glb',
+            'models/snowman.glb'
         ];
         let currentModelPath = null;
 
